# N-Body_Simulation

./: .env  Cargo.toml  README.md
src/: app.rs  application.rs  benchmark.rs  config.rs  main.rs  particle.rs  rayon_world.rs  sequential_world.rs  worker_threads.rs  world.rs
