[package]
name = "massively_parallel_project"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3

[dependencies]
glam = "0.24.*"
coffee = { version = "0.4.*", features = ["opengl", "debug"] }
rayon = "1.7.*"
atomic_float = "0.1.*"
parking_lot = "0.12.*"
cargo-watch = "8.4.0"
dotenv = "0.15"
